[gd_scene load_steps=12 format=3 uid="uid://br0283go6r254"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_uet12"]
[ext_resource type="Texture2D" uid="uid://unvetjk5gvi1" path="res://Enemy/Yakuza_Sprite_Ver1.webp" id="2_lt8rw"]
[ext_resource type="Script" path="res://Common/StateMachine/StateMachine.gd" id="3_l57dc"]
[ext_resource type="Script" path="res://Enemy/Idle.gd" id="4_d2362"]
[ext_resource type="Script" path="res://Enemy/Roaming.gd" id="5_qmmml"]
[ext_resource type="Script" path="res://Enemy/ChasingPlayer.gd" id="6_lkpsf"]
[ext_resource type="AudioStream" uid="uid://bbnhh1hadmth1" path="res://Audio/Sound_Effects/Enemy Headshot Style C.mp3" id="7_ov2kw"]
[ext_resource type="AudioStream" uid="uid://bfstopg5y8fbf" path="res://Audio/Sound_Effects/Enemy Hit.mp3" id="8_jv5kc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0xms"]
size = Vector2(67, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_iy2cn"]
radius = 10.0499

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4t632"]
radius = 27.0
height = 90.0

[node name="Enemy" type="RigidBody2D"]
z_index = 1
collision_layer = 2
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_uet12")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.500003, 0.500003)
scale = Vector2(0.301, 0.301)
texture = ExtResource("2_lt8rw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 51)
shape = SubResource("RectangleShape2D_q0xms")

[node name="HeadHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadHitbox"]
position = Vector2(-2, -44)
shape = SubResource("CircleShape2D_iy2cn")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-2, 10)
shape = SubResource("CapsuleShape2D_4t632")

[node name="PlayerDetector1" type="RayCast2D" parent="."]
target_position = Vector2(650, 0)
collision_mask = 8

[node name="PlayerDetector2" type="RayCast2D" parent="."]
target_position = Vector2(630, -50)
collision_mask = 8

[node name="PlayerDetector3" type="RayCast2D" parent="."]
target_position = Vector2(610, -100)
collision_mask = 8

[node name="BackDetector1" type="RayCast2D" parent="."]
target_position = Vector2(-100, 0)
collision_mask = 8

[node name="BackDetector2" type="RayCast2D" parent="."]
target_position = Vector2(-80, -80)
collision_mask = 8

[node name="AttackDetector1" type="RayCast2D" parent="."]
target_position = Vector2(50, 0)
collision_mask = 8

[node name="AttackDetector2" type="RayCast2D" parent="."]
target_position = Vector2(40, -60)
collision_mask = 8

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="RoamTimer" type="Timer" parent="."]
one_shot = true

[node name="ChasingPlayerTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("3_l57dc")
CURRENT_STATE = NodePath("EnemyIdle")

[node name="EnemyIdle" type="Node" parent="EnemyStateMachine"]
script = ExtResource("4_d2362")

[node name="EnemyRoaming" type="Node" parent="EnemyStateMachine"]
script = ExtResource("5_qmmml")

[node name="ChasingPlayer" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_lkpsf")

[node name="EnemyHeadshotStyleC" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ov2kw")

[node name="EnemyHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_jv5kc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="area_entered" from="HeadHitbox" to="." method="_on_head_hitbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="EnemyStateMachine/EnemyIdle" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="EnemyStateMachine/EnemyIdle" method="_on_state_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="EnemyStateMachine/EnemyRoaming" method="_on_state_timer_timeout"]
[connection signal="timeout" from="RoamTimer" to="EnemyStateMachine/EnemyRoaming" method="_on_roam_timer_timeout"]
[connection signal="timeout" from="ChasingPlayerTimer" to="EnemyStateMachine/ChasingPlayer" method="_on_chasing_player_timer_timeout"]
[connection signal="moving" from="EnemyStateMachine/EnemyIdle" to="." method="_on_enemy_idle_moving"]
[connection signal="look_right" from="EnemyStateMachine/EnemyRoaming" to="." method="_on_enemy_roaming_look_right"]
[connection signal="moving" from="EnemyStateMachine/EnemyRoaming" to="." method="_on_enemy_roaming_moving"]
[connection signal="attack" from="EnemyStateMachine/ChasingPlayer" to="." method="_on_chasing_player_attack"]
[connection signal="look_right" from="EnemyStateMachine/ChasingPlayer" to="." method="_on_chasing_player_look_right"]
[connection signal="moving" from="EnemyStateMachine/ChasingPlayer" to="." method="_on_chasing_player_moving"]
